css/styles.css
/* ... */
@media screen and (min-width: 758px) {
    .footer-container {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 0;
        width: 582px;
    }
}

@media screen and (min-width: 1158px) {
    .footer-container{
        flex-wrap: nowrap;
        gap: 72px;
        width: 100%;
    }
}


.footer-info,
.footer-social {
   text-align: center;
   margin: 0 auto;
}

@media screen and (min-width: 758px) {
    .footer-info {
        text-align: left;
        margin: 0;
    }

    .footer-social {
        margin-left: 24px;
    }
}
.footer-social{
    color: white;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0.32px;
    margin-bottom: 16px;
}

.footer-social-links{
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 16px;
}
.footer-social-link{
    width: 40px;
    height: 40px;
    background-color: var(--iris);
    fill: #f4f4fd;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
}

.footer-social-link:hover,
.footer-social-link:focus {
    background-color: #31d0aa;
}

.footer-subscribe-text {
    text-align: center;
    color: var(--white, #FFF);
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0.32px;
    margin-bottom: 16px;
}

@media screen and (min-width: 768px){
.footer-subscribe-text {
        text-align: left;
    }
}
.footer-subscribe-input {
    width: 398px;
    height: 40px;
    border-radius: 4px;
    border: 1px solid var(--white, #FFF);
    background-color: transparent;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
    color: var(--white, #FFF);
    font-size: 12px;
    line-height: 1.5;
    letter-spacing: 0.48px;
    padding: 8px 16px;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
}
@media screen and (min-width: 768px) {
    .footer-subscribe-input{
        width: 264px;
    }
    
}
.footer-subscribe-button{
    min-width: 165px;
    cursor: pointer;
    display: inline-flex;
    padding: 8px 24px;
    justify-content: center;
    align-items: center;
    gap: 16px;
    border: none;
    border-radius: 4px;
    background: var(--iris, #4D5AE5);
    color: var(--white, #FFF);
    text-align: center;
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0.64px;
    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1)
}

.footer-subscribe-button:focus {
    background: #404BBF;
}

.footer-subscribe-button:hover {
    background: #404BBF;
}


.footer-subscribe-icon {
    margin-left: 16px;
    fill: var(--white, #FFF);
}
.footer-subscribe-form{
    display: flex;
    gap: 24px;
    align-items: center;
    flex-direction: column;
}

@media screen and (min-width: 768px){
    .footer-subscribe-form {
        flex-direction: row;
    }
}

.portfolio-filters {
    display: flex;
    align-items: center;
    gap: 24px;
    justify-content: center;
    margin-bottom: 72px;
}
.portfolio-section {
    padding-top: 96px;
    padding-bottom: 120px;
}
.portfolio{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    row-gap: 48px;
    column-gap: 24px;
    padding-bottom: 120px;
}
.portfolio-card{
    border: 1px solid #e7e9fc;
    border-top: none;
    padding: 32px 16px;
}
.portfolio-item{
    width: calc((100% - 48px) / 3);
    height: 100%;
}
.portfolio-item:hover {
    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
}
.portfolio-link{
    display: block;
    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
    /* для плавної появи тіні */
}
.portfolio-link:hover{
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
}
.backdrop{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(46, 47, 66, 0.4);
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.is-hidden{
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
}

.empty {
}
.modal-header{
    display: block;
    width: 360px;
    color: var(--navyblue, #2E2F42);
    text-align: center;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    text-align: center;
    letter-spacing: 0.02em;
    margin-bottom: 16px;
}
.modal-form {
    margin-bottom: 8px;
}
.modal-input-container{
    position: relative;
    margin-bottom: 8px;
}
.modal-label {
    display: block;
    margin-bottom: 8px;
    position: relative;
    font-size: 12px;
    line-height: 1.17;
    margin-bottom: 4px;
    letter-spacing: 0.04em;
    color: #8e8f99;
}
.modal-input{
    color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
    font-size: 12px;
    line-height: 14px;
    letter-spacing: 0.48px;
    width: 100%;
    height: 40px;
    padding: 11px 38px;
    border-radius: 4px;
    border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
    outline: transparent;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    background-color: transparent;
}
.modal-input:focus, .modal-textarea:focus {
    border-color: var(--iris, #4D5AE5);
}
.modal-input:focus + .modal-icon {
    fill: var(--iris, #4D5AE5);
}
.modal-header-name {
    color: var(--lightslate, #8E8F99); 
    /* Small Text */
    font-size: 12px;
    line-height: 14px;
    letter-spacing: 0.48px;
    display: block;
    margin-bottom: 4px;
}
.modal-icon{
    fill: #2E2F42;
    width: 18px;
    height: 18px;
    margin: 3px 0;
    position: absolute;
    left: 16px;
    top: 50%;
    transform: translateY(-50%);
    /* bottom: 8px; */
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-textarea-container {
    margin-bottom: 16px
}
/* ... */

